# Qt-VTK-viewer

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scenewidget.cpp  scenewidget.h
